Fixed block spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -41,6 +41,7 @@ body {
 	box-shadow:0px 0px 5px 0px rgb(0,0,0);
 	color:rgba(53,41,42,1.00);
 	margin: 0 auto;
+	margin-bottom:20px;
 	padding: 40px 20px 20px 20px;
 	border-radius:5px;
 	box-shadow:0 0 20px -4px rgb(0,0,0);
